feat: port Applied Enhancements 1.0.6 to Forge 1.20.1